--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -11,4 +11,4 @@ $border-portfolio: #eeeeee;
 $overlay: #c4c4c4;
 $social-icon: #afb1b8;
 $background: rgba(47, 48, 58, 0.4);
-$trancision: 3s cubic-bezier(0.4, 0, 0.2, 1);
+$trancision: 250ms cubic-bezier(0.4, 0, 0.2, 1);
