--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -5,7 +5,7 @@
   &__title {
     text-align: center;
     margin-bottom: 12px;
-    @include font(20px, 1.15);
+    @include font(20px, $title-line-height);
     color: $title-color;
   }
   &-field {
@@ -18,8 +18,8 @@
     display: block;
     align-items: center;
     margin-bottom: 4px;
-    @include font(12px, 1.17);
-    letter-spacing: 0.01em;
+    @include font(12px, $label-line-height);
+    letter-spacing: $form-letter_spacing;
     color: $text-color;
   }
 
@@ -35,8 +35,8 @@
     outline: none;
   }
   &__textarea::placeholder {
-    line-height: 1.14;
-    letter-spacing: 0.01em;
+    line-height: $main-line-height;
+    letter-spacing: $form-letter_spacing;
     color: rgba(117, 117, 117, 0.5);
   }
 
@@ -46,7 +46,7 @@
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     cursor: pointer;
-    line-height: 2.75;
+    line-height: $input-line-height;
     transition: all $trancision;
     outline: none;
   }
