--- a/sass/layots/_advantage.scss
+++ b/sass/layots/_advantage.scss
@@ -26,7 +26,7 @@
   }
 
   &__text {
-    line-height: 1.7;
+    line-height: $text-line-height;
   }
 
   /* добавляем  иконки сверху списка преимуществ с помощью псевдоелемента */
