--- a/sass/layots/_footer.scss
+++ b/sass/layots/_footer.scss
@@ -1,7 +1,7 @@
 .page-footer {
   background: $baner-bcg-color;
   font-weight: 400;
-  line-height: 1.7;
+  line-height: $text-line-height;
 }
 .footer-flexbox {
   display: flex;
