--- a/sass/layots/_section.scss
+++ b/sass/layots/_section.scss
@@ -5,6 +5,6 @@
 .section-title {
   margin-top: 0px;
   margin-bottom: 50px;
-  @include font(36px, 1.17);
+  @include font(36px, $label-line-height);
   text-align: center;
 }
