--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -12,3 +12,17 @@ $overlay: #c4c4c4;
 $social-icon: #afb1b8;
 $background: rgba(47, 48, 58, 0.4);
 $trancision: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+$main-letter_spacing: 0.03em;
+$btn-letter_spacing: 0.06em;
+$secondary-letter_spacing: 0.02em;
+$form-letter_spacing: 0.01em;
+$main-line-height: 1.14;
+$title-line-height: 1.15;
+$label-line-height: 1.17;
+$input-line-height: 2.75;
+$text-line-height: 1.7;
+$comand-line-height: 1.19;
+$link-line-height: 1.2;
+$hero-line-height: 1.36;
+$title-sec-line-height: 2;
+$text-sec-line-height: 1.7;
