--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -5,7 +5,7 @@
   &__title {
     text-align: center;
     margin-bottom: 12px;
-    @include font(20px, $title-line-height);
+    @include font($title-font-size, $title-line-height);
     color: $title-color;
   }
   &-field {
@@ -18,7 +18,7 @@
     display: block;
     align-items: center;
     margin-bottom: 4px;
-    @include font(12px, $label-line-height);
+    @include font($label-font-size, $label-line-height);
     letter-spacing: $form-letter_spacing;
     color: $text-color;
   }
@@ -77,7 +77,7 @@
   text-align: center;
   margin-bottom: 30px;
   padding-left: 13px;
-  @include font(14px, 1.7, 500);
+  @include font($main-font-size, $text-line-height, $sec-font-weight);
   color: $text-color;
 }
 .checkbox {
