--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -8,7 +8,7 @@
     padding: 32px 0;
     color: $title-color;
     cursor: pointer;
-    @include font(14px, 1.12, 500);
+    @include font($main-font-size, 1.12, $sec-font-weight);
     letter-spacing: $secondary-letter_spacing;
   }
 
