--- a/sass/layots/_portfolio-btn.scss
+++ b/sass/layots/_portfolio-btn.scss
@@ -11,7 +11,7 @@
   padding: 6px 22px;
   color: $title-color;
   background: $gray-bcg-color;
-  @include font(16px, 1.6, 500);
+  @include font($btn-font-size, 1.6, $sec-font-weigt);
   text-align: center;
   border-radius: 4px;
   transition: all $trancision;
