--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin font($fs, $lh, $fw: 700) {
+@mixin font($fs, $lh, $fw: $main-font-weight) {
   font-size: $fs;
   line-height: $lh;
   font-weight: $fw;
