--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -26,3 +26,13 @@ $link-line-height: 1.2;
 $hero-line-height: 1.36;
 $title-sec-line-height: 2;
 $text-sec-line-height: 1.7;
+$btn-sec-line-height: 1.87;
+$main-font-size: 14px;
+$btn-font-size: 16px;
+$title-font-size: 20px;
+$label-font-size: 12px;
+$section-font-size: 36px;
+$title-sec-font-size: 18px;
+$main-font-weight: 700;
+$sec-font-weight: 500;
+$text-font-weigt: 400;
