--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ img {
 
 .link {
   text-decoration: none;
-  transition: all 3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link:hover,
@@ -96,7 +96,7 @@ img {
   background-color: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  transition: background-color 3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn:focus {
@@ -135,7 +135,7 @@ img {
 .header-adr__icon {
   margin-right: 10px;
   fill: #757575;
-  transition: fill 3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-adr__item:hover .header-adr__icon {
@@ -355,7 +355,7 @@ img {
   height: 90px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
-  transition: 3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client__item:not(:last-child) {
@@ -374,7 +374,7 @@ img {
 
 .client__icon {
   fill: #afb1b8;
-  transition: fill 3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-container {
@@ -398,14 +398,14 @@ img {
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  transition: all 3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social__icon {
   width: 20px;
   height: 20px;
   fill: #afb1b8;
-  transition: fill 3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social__link:hover, .social__link:focus {
@@ -440,7 +440,7 @@ img {
   color: #ffffff;
   text-decoration: none;
   font-size: 26px;
-  line-height: 1.2;
+  line-height: 1.19;
   font-weight: 700;
   font-family: Raleway, sans-serif;
 }
@@ -455,7 +455,7 @@ img {
   display: block;
   color: rgba(255, 255, 255, 0.6);
   font-style: normal;
-  transition: all 3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .adress__text {
@@ -480,7 +480,7 @@ img {
   margin-bottom: 20px;
   color: #ffffff;
   font-size: 14px;
-  line-height: 1.4;
+  line-height: 1.36;
   font-weight: 700;
   text-transform: uppercase;
 }
@@ -582,7 +582,7 @@ img {
   margin-bottom: 20px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  transition: border-color 3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   outline: none;
 }
 
@@ -599,7 +599,7 @@ img {
   border-radius: 4px;
   cursor: pointer;
   line-height: 2.75;
-  transition: all 3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   outline: none;
 }
 
@@ -609,7 +609,7 @@ img {
   left: 12px;
   /* transform: translateY(-25%); */
   fill: #212121;
-  transition: fill 3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form__input:focus ~ .form__icon, .form__input:focus, .form__textarea:focus {
@@ -657,7 +657,7 @@ img {
   border: 2px solid #212121;
   border-radius: 2px;
   cursor: pointer;
-  transition: all 3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .checkbox:checked ~ .chek__icon::before {
@@ -684,7 +684,7 @@ img {
   overflow: auto;
   background: rgba(0, 0, 0, 0.2);
   opacity: 1;
-  transition: opacity 3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* скрываю модальное окно */
@@ -708,14 +708,14 @@ img {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transform: translate(-50%, -50%) scale(1);
-  transition: transform 3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal__icon {
   width: 18px;
   height: 18px;
   fill: #000000;
-  transition: fill 3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .bt-close {
