--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -31,7 +31,7 @@ img {
 
 .link {
   text-decoration: none;
-  transition: all 3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link:hover,
@@ -96,7 +96,7 @@ img {
   background-color: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  transition: background-color 3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn:focus {
@@ -135,7 +135,7 @@ img {
 .header-adr__icon {
   margin-right: 10px;
   fill: #757575;
-  transition: fill 3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-adr__item:hover .header-adr__icon {
@@ -221,7 +221,7 @@ img {
   font-weight: 500;
   text-align: center;
   border-radius: 4px;
-  transition: all 3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border: none;
 }
 
@@ -242,7 +242,7 @@ img {
   margin-left: 0;
   margin-bottom: 30px;
   border: 1px solid #eeeeee;
-  transition: all 3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .service__item:nth-child(3n) {
@@ -269,7 +269,7 @@ img {
 
 .servise__text {
   font-size: 16px;
-  line-height: 1.9;
+  line-height: 1.7;
   font-weight: 500;
 }
 
@@ -329,14 +329,14 @@ img {
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  transition: all 3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social__icon {
   width: 20px;
   height: 20px;
   fill: #afb1b8;
-  transition: fill 3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social__link:hover, .social__link:focus {
@@ -371,7 +371,7 @@ img {
   color: #ffffff;
   text-decoration: none;
   font-size: 26px;
-  line-height: 1.2;
+  line-height: 1.19;
   font-weight: 700;
   font-family: Raleway, sans-serif;
 }
@@ -386,7 +386,7 @@ img {
   display: block;
   color: rgba(255, 255, 255, 0.6);
   font-style: normal;
-  transition: all 3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .adress__text {
@@ -411,7 +411,7 @@ img {
   margin-bottom: 20px;
   color: #ffffff;
   font-size: 14px;
-  line-height: 1.4;
+  line-height: 1.36;
   font-weight: 700;
   text-transform: uppercase;
 }
