--- a/sass/components/_bottom.scss
+++ b/sass/components/_bottom.scss
@@ -4,7 +4,7 @@
   min-width: 200px;
   align-items: center;
   text-align: center;
-  @include font($btn-font-size, $btn-sec-line-height, $text-font-weigt);
+  @include font($btn-font-size, $btn-sec-line-height, $text-font-weight);
   letter-spacing: $btn-letter_spacing;
   border: none;
   outline: none;
