--- a/sass/layots/_hero.scss
+++ b/sass/layots/_hero.scss
@@ -20,7 +20,7 @@
   margin-top: 0;
   margin-bottom: 30px;
   @include font(44px, $hero-line-height, 900);
-  letter-spacing: $btn_spacing;
+  letter-spacing: $btn-letter_spacing;
   text-transform: uppercase;
   color: $white;
 }
