--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -35,4 +35,4 @@ $section-font-size: 36px;
 $title-sec-font-size: 18px;
 $main-font-weight: 700;
 $sec-font-weight: 500;
-$text-font-weigt: 400;
+$text-font-weight: 400;
